--- a/index.html
+++ b/index.html
@@ -4,10 +4,29 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Odin - Sign Up</title>
-    <link rel="styleshet" href="reset.css" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles/fonts.css" />
+    <link rel="stylesheet" href="styles/reset.css" />
+    <link rel="stylesheet" href="styles/img-panel.css" />
   </head>
   <body>
-    
+    <div id="img-panel">
+      <img src="media/mountain.jpg" alt="picture of a mountain" id="bg-img" />
+      <div class="logo">
+        <img src="media/odin-lined.png" alt="viking logo" class="logo-img" />
+        <h1 class="logo-txt">ODIN</h1>
+      </div>
+      <p class="credits">
+        Photo by
+        <a
+          href="https://unsplash.com/photos/snow-mountain-under-stars-phIFdC6lA4E"
+          >Benjamin Voros</a
+        >
+        on
+        <a
+          href="https://unsplash.com/photos/snow-mountain-under-stars-phIFdC6lA4E"
+          >Unsplash</a
+        >
+      </p>
+    </div>
   </body>
 </html>
