--- a/index.html
+++ b/index.html
@@ -40,54 +40,54 @@
         <h3>You <em>know</em> you want to.</h3>
       </header>
       <form action="/sign-up" method="POST" id="sign-up">
-        <fieldset>
-          <legend>Let's do this!</legend>
-
-          <div>
-            <label for="first-name" name="user_firstname">FIRST NAME</label>
-            <input id="first-name" type="text" required />
-            <small data-help="* Must only contain alphabets"></small>
-          </div>
-
-          <div>
-            <label for="last-name" name="user_lastname">LAST NAME</label>
-            <input id="last-name" type="text" required />
-            <small data-help="* Must only contain alphabets"></small>
-          </div>
-
-          <div>
-            <label for="email" name="user_email">EMAIL</label>
-            <input id="email" type="email" required />
-            <small data-help="* Must be a valid email format"></small>
-          </div>
-
-          <div>
-            <label for="phone" name="user_phone">PHONE NUMBER</label>
-            <input
-              id="phone"
-              type="text"
-              pattern="^\d{3}-\d{3}-\d{4}$"
-              title="XXX-XXX-XXXX"
-              required
-            />
-            <small data-help="* Must be of the form XXX-XXX-XXXX"></small>
-          </div>
-
-          <div>
-            <label for="password" name="user_password">PASSWORD</label>
-            <input id="password" type="password" required />
-            <small data-help="* Passwords do not match"></small>
-          </div>
-
-          <div>
-            <label for="confirm-password" name="confirm_pass"
-              >CONFIRM PASSWORD</label
-            >
-            <input id="confirm-password" type="password" required />
-            <small data-help="* Passwords do not match"></small>
-          </div>
-        </fieldset>
-        <div>
+        <h3>Let's do this!</h3>
+        <div id="field-ctnr">
+          <fieldset>
+            <div>
+              <label for="first-name" name="user_firstname">FIRST NAME</label>
+              <input id="first-name" type="text" required />
+              <small data-help="* Must only contain alphabets"></small>
+            </div>
+            <div>
+              <label for="last-name" name="user_lastname">LAST NAME</label>
+              <input id="last-name" type="text" required />
+              <small data-help="* Must only contain alphabets"></small>
+            </div>
+          </fieldset>
+          <fieldset>
+            <div>
+              <label for="email" name="user_email">EMAIL</label>
+              <input id="email" type="email" required />
+              <small data-help="* Must be a valid email format"></small>
+            </div>
+            <div>
+              <label for="phone" name="user_phone">PHONE NUMBER</label>
+              <input
+                id="phone"
+                type="text"
+                pattern="^\d{3}-\d{3}-\d{4}$"
+                title="XXX-XXX-XXXX"
+                required
+              />
+              <small data-help="* Must be of the form XXX-XXX-XXXX"></small>
+            </div>
+          </fieldset>
+          <fieldset>
+            <div>
+              <label for="password" name="user_password">PASSWORD</label>
+              <input id="password" type="password" required />
+              <small data-help="* Passwords do not match"></small>
+            </div>
+            <div>
+              <label for="confirm-password" name="confirm_pass"
+                >CONFIRM PASSWORD</label
+              >
+              <input id="confirm-password" type="password" required />
+              <small data-help="* Passwords do not match"></small>
+            </div>
+          </fieldset>
+        </div>
+        <div id="submit-ctnr">
           <button type="submit">Create Account</button>
           <p>Already have an account? <a href="/sign-in">Log in</a></p>
         </div>
