--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
           <fieldset>
             <div>
               <label for="first-name" name="user_firstname">FIRST NAME</label>
-              <input id="first-name" type="text" required />
+              <input id="first-name" type="text" pattern="^[A-Za-z]+$" required />
               <small data-help="* Must only contain alphabets"></small>
             </div>
             <div>
               <label for="last-name" name="user_lastname">LAST NAME</label>
-              <input id="last-name" type="text" required />
+              <input id="last-name" type="text" pattern="^[A-Za-z]+$" required />
               <small data-help="* Must only contain alphabets"></small>
             </div>
           </fieldset>
